--- a/songs&albums.html
+++ b/songs&albums.html
@@ -6,7 +6,110 @@
     <meta name="author" content="Artem Svystun">
     <title>Imagine Dragons - Songs</title>
 </head>
-<body>
-    <H1>Songs</H1>
+<body bgcolor="#eafaf6" link="black" vlink="gray" alink="silver">
+    <font face="impact">
+        <center>
+            <a href="index.html" style="padding: 10px;">Про гурт</a>
+            <a href="frontman.html" style="padding: 10px;">Фронтмен</a>
+            <a href="line-up.html" style="padding: 10px;">Інші учасники</a>
+            <a href="songs&albums.html" style="padding: 10px;">Пісні та альбоми</a>
+        </center>
+    </font>
+
+    <H1>Songs & Albums</H1>
+
+    <table width="300px" border="1" cellpadding="3px" align="center">
+        <caption><h3>Albums</h3></caption>
+        <tbody>
+            <tr>
+                <td><img src="Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover"></td>
+                <td><img src="Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover"></td>
+                <td><img src="Origins_cover.png" alt="Origins Album Cover"></td>
+                <td><img src="Imagine_Dragons_-_Loom.png" alt="Loom Album Cover"></td>
+            </tr>
+            <tr>
+                <td>
+                    By Imagine Dragons - <a rel="nofollow" class="external free" href="http://imaginedragonsfans.com">http://imaginedragonsfans.com</a>, 
+                    <a href="//en.wikipedia.org/wiki/File:Night_Visions_Album_Cover.jpeg" title="Fair use of copyrighted material in the context of Night Visions (album)">Fair use</a>, 
+                    <a href="https://en.wikipedia.org/w/index.php?curid=36462886">Link</a>
+                </td>
+                <td>
+                    By The cover art can be obtained from <a href="//en.wikipedia.org/wiki/Interscope_Records" title="Interscope Records">Interscope Records</a>., 
+                    <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Smoke_%2B_Mirrors.png" title="Fair use of copyrighted material in the context of Smoke + Mirrors">Fair use</a>, 
+                    <a href="https://en.wikipedia.org/w/index.php?curid=45634462">Link</a>
+                </td>
+                <td>
+                    By The cover art can be obtained from the record label., <a href="//en.wikipedia.org/wiki/File:Origins_cover.png" title="Fair use of copyrighted material in the context of Origins (Imagine Dragons album)">Fair use</a>, 
+                    <a href="https://en.wikipedia.org/w/index.php?curid=58935282">Link</a>
+                </td>
+                <td>
+                    By May be found at the following website: 
+                    <a rel="nofollow" class="external text" href="https://music.apple.com/us/album/loom/1741841621">Apple Music</a>, 
+                    <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Loom.png" title="Fair use of copyrighted material in the context of Loom (Imagine Dragons album)">Fair use</a>, 
+                    <a href="https://en.wikipedia.org/w/index.php?curid=76710590">Link</a>
+                </td>
+            </tr>
+            <tr style="vertical-align: top;" align="justify">
+                <td>
+                    <p>
+                        Дебютний студійний альбом американського поп-рок-гурту Imagine Dragons, представлений 4 вересня 2012 року. 
+                        12 лютого 2013 року була представлена розширена версія платівки із трьома новими композиціями, а 26 березня 
+                        — британське видання. Ден Рейнольдс, фронтмен гурту, зазначив, що робота над альбомом тривала три роки; 
+                        шість пісень були раніше представлені у міні-альбомах.
+                    </p>
+                </td>
+                <td>
+                    <p>
+                        Другий студійний альбом американського гурту «Imagine Dragons», представлений 17 лютого 2015 року. 
+                        Платівка дебютувала на першій позиції у чарті Billboard 200 у США, а також очолила британський та канадський чарти. 
+                        Альбом став «золотим» у США, Великій Британії, Мексиці та Бразилії. Перед виходом безпосередньо платівки гурт представив 
+                        3 сингли: «I Bet My Life», «Gold» і «Shots». Загальний тираж альбому у США перевищив 1 мільйон копій у липні 2017 року.
+                    </p>
+                </td>
+                <td>
+                    <p>
+                        Четвертий студійний альбом американського гурту Imagine Dragons, представлений 9 листопада 2018 року під лейблами 
+                        «Kidinakorner», «Polydor Records» та «Interscope Records». Продюсером альбому виступив сам колектив, а також Alex da Kid, 
+                        Mattman & Robin, John Hill, Joel Little і Jayson DeZuzio, які працювали над попередньою роботою гурту — платівкою Evolve, 
+                        та Jorgen Odegard. Фронтмен Ден Рейнольдс описав Origins як «сестринський альбом» Evolve, і що ця робота завершує певний 
+                        музичний цикл їхньої творчості.
+                    </p>
+                </td>
+                <td>
+                    <p>
+                        Шостий студійний альбом американського поп-рок гурту Imagine Dragons, випущений лейблами Kidinakorner та Interscope Records 
+                        28 червня 2024 року. Стандартна версія платівки складається з дев'яти пісень (що є для гурту найменшою кількістю в альбомі 
+                        на сьогоднішній день). Продюсерами альбому став сам гурт та їх давні партнери Mattman & Robin.
+                    </p>
+                </td>
+            </tr>
+        </tbody>
+    </table> <hr>
+
+    <table border="1" align="center" cellpadding="10px" cellspacing="1px">
+        <caption><h3>Songs</h3></caption>
+
+        <colgroup>
+            <col bgcolor="91ffc0">
+            <col span="4" bgcolor="bbfcd7">
+        </colgroup>
+
+        <thead>
+            <tr bgcolor="a0e8bf"><td>Альбом</td><td>#</td><td>Пісня</td><td>Тривалість</td><td>Кількість прослуховувань на Spotify</td></tr>
+        </thead>
+        <tbody>
+            <tr><td rowspan="10">Loom</td><td colspan="4">2024, 9 пісень, 28:11 хв</td></tr>
+            <tr><td>1.</td><td>Wake Up</td>            <td>2:46</td>    <td>57 468 120</td></tr>
+            <tr><td>2.</td><td>Nice To Meet You</td>   <td>3:10</td>    <td>65 791 096</td></tr>
+            <tr><td>3.</td><td>Eyes Closed</td>        <td>3:20</td>    <td>130 664 938</td></tr>
+            <tr><td>4.</td><td>Take Me To Beach</td>   <td>2:47</td>    <td>26 801 278</td></tr>
+            <tr><td>5.</td><td>In Your Corner</td>     <td>3:59</td>    <td>21 110 105</td></tr>
+            <tr><td>6.</td><td>Gods Don't Pray</td>    <td>2:49</td>    <td>18 535 609</td></tr>
+            <tr><td>7.</td><td>Don't Forget Me</td>    <td>2:58</td>    <td>17 913 834</td></tr>
+            <tr><td>8.</td><td>Kid</td>                <td>2:39</td>    <td>10 693 748</td></tr>
+            <tr><td>9.</td><td>Fire In These Hills</td><td>3:39</td>    <td>13 119 017</td></tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
