--- a/frontman.html
+++ b/frontman.html
@@ -20,9 +20,9 @@
     </div>
 
     <H1><a name="Den R.">Frontman</a></H1>
-    <img src="Dan Raynolds.jpg" alt="Деніель Рейнольдс" width="568px" height="962px">
-    <img src="Dan Raynolds.jpg" alt="Деніель Рейнольдс" width="284px" height="481px">
-    <img src="Dan Raynolds.jpg" alt="Деніель Рейнольдс" width="148px" height="240.5px">
+    <img src="Images/Dan Raynolds.jpg" alt="Деніель Рейнольдс" width="568px" height="962px">
+    <img src="Images/Dan Raynolds.jpg" alt="Деніель Рейнольдс" width="284px" height="481px">
+    <img src="Images/Dan Raynolds.jpg" alt="Деніель Рейнольдс" width="148px" height="240.5px">
     <p>
         Деніель Колтер «Ден» Рейнольдс (<i>англ. Daniel Coulter Reynolds, нар.14 липня 1987 року, Лас-Вегас, Невада</i>) — 
         американський музикант, автор пісень, мультиінструменталіст і музичний продюсер; фронтмен та засновник 
@@ -42,12 +42,12 @@
         <H4>Його співпраці</H4>
         <ul type="circle">
             <li>All tracks - Egyptian</li>
-            <li>"Stranger" - <a href="X-Ambassadors_680x440.jpg" target="Playout">X Ambassadors</a></li>
+            <li>"Stranger" - <a href="Images/X-Ambassadors_680x440.jpg" target="Playout">X Ambassadors</a></li>
             <li>"Tessa"	- Various Artists for movie "Transformers: Age of Extinction – The Score"</li>
             <li>"Nothing Quite Like Home" - G. Love & Special Sauce featuring Ben Harper</li>
-            <li>"I Believe (Get Over Yourself)" - <a href="Nico Vega.jpg" target="Playout">Nico Vega</a></li>
-            <li>"I'm On Fire" - <a href="Nico Vega.jpg" target="Playout">Nico Vega</a></li>
-            <li>"Fear" - <a href="X-Ambassadors_680x440.jpg" target="Playout">X Ambassadors</a></li>
+            <li>"I Believe (Get Over Yourself)" - <a href="Images/Nico Vega.jpg" target="Playout">Nico Vega</a></li>
+            <li>"I'm On Fire" - <a href="Images/Nico Vega.jpg" target="Playout">Nico Vega</a></li>
+            <li>"Fear" - <a href="Images/X-Ambassadors_680x440.jpg" target="Playout">X Ambassadors</a></li>
             <li>"Someone Else" - Steve Angello</li>
             <li>"Last Day Alive" - The Chainsmokers featuring Florida Georgia Line</li>
             <li>"Lyin'" - Bishop Briggs</li>
