--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </font>
 
     <H1>About Band</H1>
-    <a href="Imagine Dragons Group.jpg" target="_blank"><img src="Imagine Dragons Group.jpg" alt="Гурт разом" width="640px" height="480px"></a>
+    <a href="Images/Imagine Dragons Group.jpg" target="_blank"><img src="Images/Imagine Dragons Group.jpg" alt="Гурт разом" width="640px" height="480px"></a>
     <p>
         Imagine Dragons — американський попрок-гурт, утворений 2008 року в Лас-Вегасі, штат Невада. 
         До складу колективу входять вокаліст <a href="frontman.html#Den R.">Ден Рейнольдс</a>, 
