--- a/line-up.html
+++ b/line-up.html
@@ -19,7 +19,7 @@
     <H1>Інші учасники гурту</H1>
 
     <H2><a name="Ben">Бен Маккі</a></H2>
-    <img src="Ben McKee.jpg" alt="Бен Маккі" width="640px" height="425px">
+    <img src="Images/Ben McKee.jpg" alt="Бен Маккі" width="640px" height="425px">
     <p>
         Бен Маккі (<i>англ. Benjamin Arthur McKee</i>) — басист та автор пісень американського інді-рок-гурту «Imagine Dragons». <br><br>
         
@@ -35,7 +35,7 @@
     </p>
 
     <H2><a name="Vein">Вейн Сермон</a></H2>
-    <img src="Wayne_Sermon.jpg" alt="Вейн Сермон" width="319px" height="480px">
+    <img src="Images/Wayne_Sermon.jpg" alt="Вейн Сермон" width="319px" height="480px">
     <p>
         Вейн Деніел Сермон (<i>англ. Wayne Daniel Sermon</i>) — гітарист, бек-вокаліст та автор пісень рок-гурту «Imagine Dragons». <br><br>
         
@@ -50,7 +50,7 @@
     </p>
 
     <H2><a name="Den P."></a>Деніел Платцман</H2>
-    <img src="Daniel Platzman.jpg" alt="Деніел Платцман" width="960px" height="520px">
+    <img src="Images/Daniel Platzman.jpg" alt="Деніел Платцман" width="960px" height="520px">
     <p>
         Деніел Джеймс Платцман (<i>англ. Daniel James Platzman</i>) — ударник і бек-вокаліст інді-рок гурту «Imagine Dragons». <br><br>
 
