--- a/songs&albums.html
+++ b/songs&albums.html
@@ -22,10 +22,10 @@
         <caption><h3>Albums</h3></caption>
         <tbody>
             <tr>
-                <td><img src="Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover"></td>
-                <td><img src="Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover"></td>
-                <td><img src="Origins_cover.png" alt="Origins Album Cover"></td>
-                <td><img src="Imagine_Dragons_-_Loom.png" alt="Loom Album Cover"></td>
+                <td><img src="Images/Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover"></td>
+                <td><img src="Images/Imagine_Dragons_-_Smoke_+_Mirrors.png" alt="Smoke+Mirrors Album Cover"></td>
+                <td><img src="Images/Origins_cover.png" alt="Origins Album Cover"></td>
+                <td><img src="Images/Imagine_Dragons_-_Loom.png" alt="Loom Album Cover"></td>
             </tr>
             <tr>
                 <td>
