--- a/songs&albums.html
+++ b/songs&albums.html
@@ -99,16 +99,16 @@
             <tr bgcolor="a0e8bf"><td>Альбом</td><td>#</td><td>Пісня</td><td>Тривалість</td><td>Кількість прослуховувань на Spotify</td></tr>
         </thead>
         <tbody>
-            <tr><td rowspan="10">Loom</td><td colspan="4">2024, 9 пісень, 28:11 хв</td></tr>
-            <tr><td>1.</td><td>Wake Up</td>            <td>2:46</td>    <td>57 468 120</td></tr>
-            <tr><td>2.</td><td>Nice To Meet You</td>   <td>3:10</td>    <td>65 791 096</td></tr>
-            <tr><td>3.</td><td>Eyes Closed</td>        <td>3:20</td>    <td>130 664 938</td></tr>
-            <tr><td>4.</td><td>Take Me To Beach</td>   <td>2:47</td>    <td>26 801 278</td></tr>
-            <tr><td>5.</td><td>In Your Corner</td>     <td>3:59</td>    <td>21 110 105</td></tr>
-            <tr><td>6.</td><td>Gods Don't Pray</td>    <td>2:49</td>    <td>18 535 609</td></tr>
-            <tr><td>7.</td><td>Don't Forget Me</td>    <td>2:58</td>    <td>17 913 834</td></tr>
-            <tr><td>8.</td><td>Kid</td>                <td>2:39</td>    <td>10 693 748</td></tr>
-            <tr><td>9.</td><td>Fire In These Hills</td><td>3:39</td>    <td>13 119 017</td></tr>
+            <tr><td rowspan="10" align="center">Loom</td><td colspan="4" align="center">2024, 9 пісень, 28:11 хв</td></tr>
+            <tr><td>1.</td><td>Wake Up</td>            <td>2:46</td>    <td align="right">57 468 120</td></tr>
+            <tr><td>2.</td><td>Nice To Meet You</td>   <td>3:10</td>    <td align="right">65 791 096</td></tr>
+            <tr><td>3.</td><td>Eyes Closed</td>        <td>3:20</td>    <td align="right">130 664 938</td></tr>
+            <tr><td>4.</td><td>Take Me To Beach</td>   <td>2:47</td>    <td align="right">26 801 278</td></tr>
+            <tr><td>5.</td><td>In Your Corner</td>     <td>3:59</td>    <td align="right">21 110 105</td></tr>
+            <tr><td>6.</td><td>Gods Don't Pray</td>    <td>2:49</td>    <td align="right">18 535 609</td></tr>
+            <tr><td>7.</td><td>Don't Forget Me</td>    <td>2:58</td>    <td align="right">17 913 834</td></tr>
+            <tr><td>8.</td><td>Kid</td>                <td>2:39</td>    <td align="right">10 693 748</td></tr>
+            <tr><td>9.</td><td>Fire In These Hills</td><td>3:39</td>    <td align="right">13 119 017</td></tr>
         </tbody>
     </table>
 
