--- a/songs&albums.html
+++ b/songs&albums.html
@@ -20,7 +20,7 @@
 
     <table width="300px" border="1" cellpadding="3px" align="center">
         <caption><h3>Albums</h3></caption>
-        <thead><tr><td><b>Night Visions</b></td><td><b>Smoke+Mirrors</b></td><td><b>Origins</b></td><td><b>Loom</b></td></tr></thead>
+        <thead bgcolor="#a0e8bf"><tr><td><b>Night Visions</b></td><td><b>Smoke+Mirrors</b></td><td><b>Origins</b></td><td><b>Loom</b></td></tr></thead>
         <tbody>
             <tr>
                 <td><img src="Images/Night_Visions_Album_Cover.jpeg" alt="Night Visions Album Cover"></td>
