--- a/index.html
+++ b/index.html
@@ -4,51 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Artem Svystun">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Imagine Dragons - About Band</title>
+    <style>
+        dt h3 {
+            font-size: larger;
+        }
+    </style>
 </head>
-<body bgcolor="#eafaf6" link="black" vlink="gray" alink="silver">
-    <font face="impact">
-        <center>
-            <a href="index.html" style="padding: 10px;">Про гурт</a>
-            <a href="frontman.html" style="padding: 10px;">Фронтмен</a>
-            <a href="line-up.html" style="padding: 10px;">Інші учасники</a>
-            <a href="songs&albums.html" style="padding: 10px;">Пісні та альбоми</a>
-        </center>
-    </font>
+<body>
+    <div class="nav">
+        <a href="index.html">Про гурт</a>
+        <a href="frontman.html">Фронтмен</a>
+        <a href="line-up.html">Інші учасники</a>
+        <a href="songs&albums.html">Пісні та альбоми</a>
+    </div>
 
-    <H1>About Band</H1>
-    <a href="Images/Imagine Dragons Group.jpg" target="_blank"><img src="Images/Imagine Dragons Group.jpg" alt="Гурт разом" width="640px" height="480px"></a>
-    <p>
-        Imagine Dragons — американський попрок-гурт, утворений 2008 року в Лас-Вегасі, штат Невада. 
-        До складу колективу входять вокаліст <a href="frontman.html#Den R.">Ден Рейнольдс</a>, 
-        гітарист <a href="line-up.html#Vein">Вейн Сермон</a>, басист і клавішник 
-        <a href="line-up.html#Ben">Бен МакКі</a> та <a href="line-up.html#Den P.">Ден Платцман</a> на ударних. Перша хвиля успіху досягла Imagine Dragons після релізу 
-        синглу «It's Time», який передував виходу дебютної студійної платівки Night Visions. 
-        Американський журнал Billboard назвав їх найяскравішими новими зірками 2013 року, а журнал 
-        Rolling Stone назвали їх сингл «Radioactive» найбільшим рок-хітом року. Другий студійний альбом 
-        Smoke + Mirrors очолив чарти у США, Канаді та Великій Британії. Після короткої перерви гурт 
-        представив третю платівку Evolve у 2017 році, два сингли із якої — «Believer» і «Thunder» — очолили чарти. 
-        Попри комерційний успіх усіх альбомів, гурт отримує змішані відгуки від критиків.
+    <H1 class="headers">Про гурт<hr></H1>
+    <section class="main-container">
+        <div>
+            <a href="Images/Imagine Dragons Group.jpg" target="_blank"><img src="Images/Imagine Dragons Group.jpg" alt="Гурт разом" width="640px" height="480px"></a>
+        </div>
 
-        Детальніше за життям цього гурту можна стежити на сайті - http://imaginedragonsfans.com
-    </p>
-
-    <p>
-        Imagine Dragons тричі отримували <font size="4"><u>American Music Award</u></font>, п'ять разів — <font size="4"><u>Billboard Music Awards</u></font>, 
-        одну <font size="4"><u>нагороду Греммі</u></font> та одну <font size="4"><u>World Music Award</u></font>. Загалом у США продано <font color="orange">12 мільйонів</font> копій 
-        платівок гурту і <font color="red">35 мільйонів</font> — в усьому світі. <hr>
-    </p>
+        <div>
+            <p style="font-size: larger;">
+                Imagine Dragons — американський попрок-гурт, утворений 2008 року в Лас-Вегасі, штат Невада. 
+                До складу колективу входять вокаліст <a href="frontman.html#Den R.">Ден Рейнольдс</a>, 
+                гітарист <a href="line-up.html#Vein">Вейн Сермон</a>, басист і клавішник 
+                <a href="line-up.html#Ben">Бен МакКі</a> та <a href="line-up.html#Den P.">Ден Платцман</a> на ударних. Перша хвиля успіху досягла Imagine Dragons після релізу 
+                синглу «It's Time», який передував виходу дебютної студійної платівки Night Visions. 
+                Американський журнал Billboard назвав їх найяскравішими новими зірками 2013 року, а журнал 
+                Rolling Stone назвали їх сингл «Radioactive» найбільшим рок-хітом року. Другий студійний альбом 
+                Smoke + Mirrors очолив чарти у США, Канаді та Великій Британії. Після короткої перерви гурт 
+                представив третю платівку Evolve у 2017 році, два сингли із якої — «Believer» і «Thunder» — очолили чарти. 
+                Попри комерційний успіх усіх альбомів, гурт отримує змішані відгуки від критиків.
+        
+                Детальніше за життям цього гурту можна стежити на сайті - http://imaginedragonsfans.com <br><br>
+        
+                Imagine Dragons тричі отримували <span class="emphesise"><u>American Music Award</u></span>, п'ять разів — <span class="emphesise"><u>Billboard Music Awards</u></span>, 
+                одну <span class="emphesise"><u>Gremmy Award</u></span> та одну <span class="emphesise"><u>World Music Award</u></span>. Загалом у США продано 12 мільйонів копій 
+                платівок гурту і 35 мільйонів — в усьому світі.
+            </p>
+        </div>
+    </section>
 
     <dl>
-        <dt><h3>American Music Award</h3></dt>
+        <dt><h3 class="headers"><span class="emphesise">American Music Award<hr></span></h3></dt>
         <dd>
             Щорічне вручення американських музичних нагород, яке випускає Dick Clark Productions з 1974 року. 
             Номінанти обираються на основі комерційних показників, таких як продажі та радіоротації. 
             Переможці визначаються шляхом опитування громадськості та фанатів, які можуть голосувати на вебсайті AMA.
         </dd>
 
-        <dt><h3>Billboard Music Awards</h3></dt>
-        <dd>
+        <dt><h3 class="headers"><span class="emphesise">Billboard Music Awards<hr></span></h3></dt>
+        <dd style="font-family: 'Courier New', Courier, monospace;">
             Відзнака, яку щорічно вручає Billboard, видання, яке висвітлює музичний бізнес і чарт 
             популярності музики. Шоу Billboard Music Awards проводиться щорічно з 1990 року, за винятком 2007-2010 років. 
             Раніше захід проводився в грудні, але після повернення в 2011 році проводиться в травні. 19 жовтня 2023 року 
@@ -56,19 +65,19 @@
             на веб-сайт і сторінки Billboard у соціальних мережах, починаючи з випуску 2023 року 19 листопада.
         </dd>
 
-        <dt><h3>Нагорода Греммі</h3></dt>
+        <dt><h3 class="headers"><span class="emphesise">Gremmy Award<hr></span></h3></dt>
         <dd>
             Музична нагорода американської Академії звукозапису, що існує з 1958 року. Є однією із найпрестижніших нагород 
-            у сучасній музиці, яку можна порівняти із премією «Оскар» у кінематографі. <br><br>
+            у сучасній музиці, яку можна порівняти із премією «Оскар» у кінематографі. <br>
 
             «Греммі» присуджують щорічно в 108 категоріях у 30 музичних жанрах за голосуванням уповноважених 
             членів Академії звукозапису (англ. «Recording Academy»).
         </dd>
 
-        <dt><h3>World Music Awards</h3></dt>
+        <dt><h3 class="headers"><span class="emphesise">World Music Award<hr></span></h3></dt>
         <dd>
             Міжнародна музична премія, що вручається щорічно з 1989 року в Монте-Карло. Вона присуджується виконавцям за результатами світових продажів їх записів на підставі даних Міжнародної 
-            федерації виробників фонограм. <br><br>
+            федерації виробників фонограм. <br>
 
             Церемонія транслюється в Європі, Північній і Південній Америці, Африці, Азії, Австралії та Нової Зеландії, 
             в цілому охоплюючи більше 160 країн світу. Освітленням шоу в ЗМІ в основному здійснюють сторонні компанії.
