--- a/songs&albums.html
+++ b/songs&albums.html
@@ -22,7 +22,7 @@
 
     <H1>Пісні та альбоми<hr></H1>
 
-    <table class="albums-table">
+    <table id="albums-table">
         <caption><h2 class="headers">Albums</h2></caption>
         <thead><tr><td><b>Night Visions</b></td><td><b>Smoke+Mirrors</b></td><td><b>Origins</b></td><td><b>Loom</b></td></tr></thead>
         <tbody>
@@ -91,7 +91,7 @@
         </tbody>
     </table>
 
-    <table class="songs-table">
+    <table id="songs-table">
         <caption><h2 class="headers">Songs</h2></caption>
 
         <thead>
