--- a/line-up.html
+++ b/line-up.html
@@ -16,9 +16,9 @@
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
 
-    <H1>Інші учасники гурту</H1>
+    <H1 class="headers">Інші учасники гурту</H1>
 
-    <H2><a name="Ben">Бен Маккі</a><hr></H2>
+    <H2 class="headers"><a name="Ben">Бен Маккі</a><hr></H2>
     <img src="Images/Ben McKee.jpg" alt="Бен Маккі" width="640px" height="425px">
     <p>
         Бен Маккі (<i>англ. Benjamin Arthur McKee</i>) — басист та автор пісень американського інді-рок-гурту «Imagine Dragons».
@@ -38,7 +38,7 @@
         Також саме МакКі запросив ударника <a href="#Den">Деніела Платцмана</a>.
     </p>
 
-    <H2><a name="Vein">Вейн Сермон</a><hr></H2>
+    <H2 class="headers"><a name="Vein">Вейн Сермон</a><hr></H2>
     <img src="Images/Wayne_Sermon.jpg" alt="Вейн Сермон" width="319px" height="480px">
     <p>
         Вейн Деніел Сермон (<i>англ. Wayne Daniel Sermon</i>) — гітарист, бек-вокаліст та автор пісень рок-гурту «Imagine Dragons».
@@ -58,7 +58,7 @@
         Цікаво, що Вейн Сермон страждає на хронічне безсоння і часто записує пісні посеред ночі.
     </p>
 
-    <H2><a name="Den P."></a>Деніел Платцман<hr></H2>
+    <H2 class="headers"><a name="Den P."></a>Деніел Платцман<hr></H2>
     <img src="Images/Daniel Platzman.jpg" alt="Деніел Платцман" width="960px" height="520px">
     <p>
         Деніел Джеймс Платцман (<i>англ. Daniel James Platzman</i>) — ударник і бек-вокаліст інді-рок гурту «Imagine Dragons».
@@ -75,7 +75,7 @@
         Покинув гурт в березні 2023 року. Але було вирішено залишити запис про нього, через великий вклад у ранню творчість гурту.
     </p>
 
-    <H2>Нагороди<hr></H2>
+    <H2 class="headers">Нагороди<hr></H2>
     <p>
         Кожний член гурту <a href="https://www.president.gov.ua/documents/5952022-43765" target="_blank"><b>отримав</b></a> Орден «За заслуги» ІІІ ступеня (Україна, 23 серпня 2022) — за значні особисті заслуги у 
         зміцненні міждержавного співробітництва, підтримку державного суверенітету та територіальної цілісності України, 
