--- a/songs&albums.html
+++ b/songs&albums.html
@@ -20,7 +20,7 @@
         <a href="songs&albums.html">Пісні та альбоми</a>
     </div>
 
-    <H1>Пісні та альбоми<hr></H1>
+    <H1 class="headers">Пісні та альбоми<hr></H1>
 
     <table id="albums-table">
         <caption><h2 class="headers">Albums</h2></caption>
