--- a/frontman.html
+++ b/frontman.html
@@ -78,7 +78,7 @@
 
         <H2 class="headers">Нагороди<hr></H2>
         <p>
-            Ден Рейнольдс <a href="https://www.president.gov.ua/documents/5952022-43765" target="_blank"><b>отримав</b></a> Орден «За заслуги» ІІІ ступеня (Україна, 23 серпня 2022) — за значні особисті заслуги у 
+            Ден Рейнольдс <a id="#award-doc" href="https://www.president.gov.ua/documents/5952022-43765" target="_blank"><b>отримав</b></a> Орден «За заслуги» ІІІ ступеня (Україна, 23 серпня 2022) — за значні особисті заслуги у 
             зміцненні міждержавного співробітництва, підтримку державного суверенітету та територіальної цілісності України, 
             вагомий внесок у популяризацію Української держави у світі.
         </p>
