--- a/frontman.html
+++ b/frontman.html
@@ -73,7 +73,7 @@
             Небрасці, де пропрацював на добровільних засадах наступні два роки. Про свої колись 
             досить непрості взаємини із батьками Рейнольдс написав пісню «I Bet My Life». Після 
             закінчення школи Ден навчався в одному з університетів Лас-Вегаса, а пізніше — в Університеті 
-            Брігама Янга. <br><hr>
+            Брігама Янга. <br>
         </p>
 
         <H2 class="headers">Нагороди<hr></H2>
