--- a/songs&albums.html
+++ b/songs&albums.html
@@ -29,58 +29,75 @@
             </tr>
             <tr class="album-copyright">
                 <td>
-                    By Imagine Dragons - <a rel="nofollow" class="external free" href="http://imaginedragonsfans.com">http://imaginedragonsfans.com</a>, 
-                    <a href="//en.wikipedia.org/wiki/File:Night_Visions_Album_Cover.jpeg" title="Fair use of copyrighted material in the context of Night Visions (album)">Fair use</a>, 
-                    <a href="https://en.wikipedia.org/w/index.php?curid=36462886">Link</a>
+                    <p>
+                        By Imagine Dragons - <a rel="nofollow" class="external free" href="http://imaginedragonsfans.com">http://imaginedragonsfans.com</a>, 
+                        <a href="//en.wikipedia.org/wiki/File:Night_Visions_Album_Cover.jpeg" title="Fair use of copyrighted material in the context of Night Visions (album)">Fair use</a>, 
+                        <a href="https://en.wikipedia.org/w/index.php?curid=36462886">Link</a>
+                    </p>
                 </td>
                 <td>
-                    By The cover art can be obtained from <a href="//en.wikipedia.org/wiki/Interscope_Records" title="Interscope Records">Interscope Records</a>., 
-                    <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Smoke_%2B_Mirrors.png" title="Fair use of copyrighted material in the context of Smoke + Mirrors">Fair use</a>, 
-                    <a href="https://en.wikipedia.org/w/index.php?curid=45634462">Link</a>
+                    <p>
+                        By The cover art can be obtained from <a href="//en.wikipedia.org/wiki/Interscope_Records" title="Interscope Records">Interscope Records</a>., 
+                        <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Smoke_%2B_Mirrors.png" title="Fair use of copyrighted material in the context of Smoke + Mirrors">Fair use</a>, 
+                        <a href="https://en.wikipedia.org/w/index.php?curid=45634462">Link</a>
+                    </p>
+
                 </td>
                 <td>
-                    By The cover art can be obtained from the record label., <a href="//en.wikipedia.org/wiki/File:Origins_cover.png" title="Fair use of copyrighted material in the context of Origins (Imagine Dragons album)">Fair use</a>, 
-                    <a href="https://en.wikipedia.org/w/index.php?curid=58935282">Link</a>
+                    <p>
+                        By The cover art can be obtained from the record label., <a href="//en.wikipedia.org/wiki/File:Origins_cover.png" title="Fair use of copyrighted material in the context of Origins (Imagine Dragons album)">Fair use</a>, 
+                        <a href="https://en.wikipedia.org/w/index.php?curid=58935282">Link</a>
+                    </p>
                 </td>
                 <td>
-                    By May be found at the following website: 
-                    <a rel="nofollow" class="external text" href="https://music.apple.com/us/album/loom/1741841621">Apple Music</a>, 
-                    <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Loom.png" title="Fair use of copyrighted material in the context of Loom (Imagine Dragons album)">Fair use</a>, 
-                    <a href="https://en.wikipedia.org/w/index.php?curid=76710590">Link</a>
+                    <p>
+                        By May be found at the following website: 
+                        <a rel="nofollow" class="external text" href="https://music.apple.com/us/album/loom/1741841621">Apple Music</a>, 
+                        <a href="//en.wikipedia.org/wiki/File:Imagine_Dragons_-_Loom.png" title="Fair use of copyrighted material in the context of Loom (Imagine Dragons album)">Fair use</a>, 
+                        <a href="https://en.wikipedia.org/w/index.php?curid=76710590">Link</a>
+                    </p>
                 </td>
             </tr>
             <tr class="album-text">
                 <td>
-                    <p>
-                        Дебютний студійний альбом американського поп-рок-гурту Imagine Dragons, представлений 4 вересня 2012 року. 
-                        12 лютого 2013 року була представлена розширена версія платівки із трьома новими композиціями, а 26 березня 
-                        — британське видання. Ден Рейнольдс, фронтмен гурту, зазначив, що робота над альбомом тривала три роки; 
-                        шість пісень були раніше представлені у міні-альбомах.
-                    </p>
+                    <div>
+                        <p>
+                            Дебютний студійний альбом американського поп-рок-гурту Imagine Dragons, представлений 4 вересня 2012 року. 
+                            12 лютого 2013 року була представлена розширена версія платівки із трьома новими композиціями, а 26 березня 
+                            — британське видання. Ден Рейнольдс, фронтмен гурту, зазначив, що робота над альбомом тривала три роки; 
+                            шість пісень були раніше представлені у міні-альбомах.
+                        </p>
+                    </div>
                 </td>
                 <td>
-                    <p>
-                        Другий студійний альбом американського гурту «Imagine Dragons», представлений 17 лютого 2015 року. 
-                        Платівка дебютувала на першій позиції у чарті Billboard 200 у США, а також очолила британський та канадський чарти. 
-                        Альбом став «золотим» у США, Великій Британії, Мексиці та Бразилії. Перед виходом безпосередньо платівки гурт представив 
-                        3 сингли: «I Bet My Life», «Gold» і «Shots». Загальний тираж альбому у США перевищив 1 мільйон копій у липні 2017 року.
-                    </p>
+                    <div>
+                        <p>
+                            Другий студійний альбом американського гурту «Imagine Dragons», представлений 17 лютого 2015 року. 
+                            Платівка дебютувала на першій позиції у чарті Billboard 200 у США, а також очолила британський та канадський чарти. 
+                            Альбом став «золотим» у США, Великій Британії, Мексиці та Бразилії. Перед виходом безпосередньо платівки гурт представив 
+                            3 сингли: «I Bet My Life», «Gold» і «Shots». Загальний тираж альбому у США перевищив 1 мільйон копій у липні 2017 року.
+                        </p>
+                    </div>
                 </td>
                 <td>
-                    <p>
-                        Четвертий студійний альбом американського гурту Imagine Dragons, представлений 9 листопада 2018 року під лейблами 
-                        «Kidinakorner», «Polydor Records» та «Interscope Records». Продюсером альбому виступив сам колектив, а також Alex da Kid, 
-                        Mattman & Robin, John Hill, Joel Little і Jayson DeZuzio, які працювали над попередньою роботою гурту — платівкою Evolve, 
-                        та Jorgen Odegard. Фронтмен Ден Рейнольдс описав Origins як «сестринський альбом» Evolve, і що ця робота завершує певний 
-                        музичний цикл їхньої творчості.
-                    </p>
+                    <div>
+                        <p>
+                            Четвертий студійний альбом американського гурту Imagine Dragons, представлений 9 листопада 2018 року під лейблами 
+                            «Kidinakorner», «Polydor Records» та «Interscope Records». Продюсером альбому виступив сам колектив, а також Alex da Kid, 
+                            Mattman & Robin, John Hill, Joel Little і Jayson DeZuzio, які працювали над попередньою роботою гурту — платівкою Evolve, 
+                            та Jorgen Odegard. Фронтмен Ден Рейнольдс описав Origins як «сестринський альбом» Evolve, і що ця робота завершує певний 
+                            музичний цикл їхньої творчості.
+                        </p>
+                    </div>
                 </td>
                 <td>
-                    <p>
-                        Шостий студійний альбом американського поп-рок гурту Imagine Dragons, випущений лейблами Kidinakorner та Interscope Records 
-                        28 червня 2024 року. Стандартна версія платівки складається з дев'яти пісень (що є для гурту найменшою кількістю в альбомі 
-                        на сьогоднішній день). Продюсерами альбому став сам гурт та їх давні партнери Mattman & Robin.
-                    </p>
+                    <div>
+                        <p>
+                            Шостий студійний альбом американського поп-рок гурту Imagine Dragons, випущений лейблами Kidinakorner та Interscope Records 
+                            28 червня 2024 року. Стандартна версія платівки складається з дев'яти пісень (що є для гурту найменшою кількістю в альбомі 
+                            на сьогоднішній день). Продюсерами альбому став сам гурт та їх давні партнери Mattman & Robin.
+                        </p>
+                    </div>
                 </td>
             </tr>
         </tbody>
