--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <a href="Images/Imagine Dragons Group.jpg" target="_blank"><img src="Images/Imagine Dragons Group.jpg" alt="Гурт разом" width="640px" height="480px"></a>
         </div>
 
-        <div>
-            <p style="font-size: larger;">
+        <div class="content-conteiner">
+            <p>
                 Imagine Dragons — американський попрок-гурт, утворений 2008 року в Лас-Вегасі, штат Невада.
                 До складу колективу входять вокаліст <a href="frontman.html#Den R.">Ден Рейнольдс</a>,
                 гітарист <a href="line-up.html#Vein">Вейн Сермон</a>, басист і клавішник
